; ModuleID = '/home/carl/AnghaBench/zstd/tests/regression/extr_result.c_result_get_error_string.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/regression/extr_result.c_result_get_error_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"okay\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"skip\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"system error\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"compression error\00", align 1
@.str.4 = private unnamed_addr constant [20 x i8] c"decompression error\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"round trip error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @result_get_error_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @result_get_error(i32 %4)
  switch i32 %5, label %12 [
    i32 131, label %6
    i32 129, label %7
    i32 128, label %8
    i32 133, label %9
    i32 132, label %10
    i32 130, label %11
  ]

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %12

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %12

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %12

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %12

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %12

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %12

12:                                               ; preds = %6, %7, %8, %9, %10, %11, %1
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32 @result_get_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
